--- a/src/app/agri-bid-home/agri-bid-home-page/agri-bid-home-page.component.css
+++ b/src/app/agri-bid-home/agri-bid-home-page/agri-bid-home-page.component.css
@@ -1,8 +1,10 @@
 .home-page-image {
-    width: 100%;
-    height: 50vh;
     background-image: url('/assets/crop_image.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-}
+    min-height: 60vh;
+    width: 100%;
+    color: white;
+  }
+  
