--- a/src/app/agri-bid-home/farmer-registration-model/farmer-registration-model.component.html
+++ b/src/app/agri-bid-home/farmer-registration-model/farmer-registration-model.component.html
@@ -1,8 +1,6 @@
 <div class="app-backgroud-color" name="farmer-registration-form">
+    <div class="btn p-0 w-100"><i class="fa fa-times fs-4 float-end pe-1" (click)="closeRegistrationModel()"></i></div>
     <div class="row">
-        <div class="col-md-12">
-            <i class="bi bi-x-square-fill float-end pe-2" (click)="closeRegistrationModel()"></i>
-        </div>
         <div class="col-md-12 text-center fs-4 pt-2">
             Farmer Registration
         </div>
