--- a/src/app/user-screen/user-screen.component.html
+++ b/src/app/user-screen/user-screen.component.html
@@ -1,5 +1,8 @@
 <header class="header d-flex justify-content-between align-items-center px-3 py-2">
     <div class="home-page-icons-size">AGRI BID</div>
+    <button class="btn d-md-none" (click)="toggleSidebar()">
+        <i class="fa fa-bars"></i>
+    </button>
     <div name="logout">
         <a class="text-decoration-none text-dark" routerLink="/" routerLinkActive="active">
             <i class="fa-solid fa-right-from-bracket pe-3" title="Log Out"></i></a>
@@ -7,12 +10,13 @@
 </header>
 
 
-<aside class="sidenav position-fixed p-3">
+<aside class="sidenav position-fixed p-3" [ngClass]="{ 'open': isSidebarOpen || isLargeScreen }">
     <nav class="d-flex flex-column overflow-auto">
         <ul class="nav flex-column">
-            <li class="nav-item" *ngFor="let navItem of userNavItems">
-                <a class="nav-link fs-6 text-decoration-none"
-                    [routerLink]="[navItem.userType.toLowerCase(), navItem.path]" routerLinkActive="active">
+            <li class="nav-item" *ngFor="let navItem of userNavItems; let i=index" routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }">
+                <a class="nav-link fs-6 text-decoration-none" [id]="'navItem' + i"
+                    [routerLink]="[navItem.userType.toLowerCase(), navItem.path]">
                     <i [ngClass]="navItem.itemIcon"></i>&nbsp;&nbsp;{{navItem.itemName}}</a>
             </li>
         </ul>
