--- a/src/app/user-screen/user-screen.component.html
+++ b/src/app/user-screen/user-screen.component.html
@@ -23,7 +23,11 @@
     </nav>
 </aside>
 
-
 <main class="content">
     <router-outlet></router-outlet>
 </main>
+
+<footer class="footer text-center py-2 mt-auto">
+    <div class="container d-flex justify-content-between align-items-center p-1">
+    </div>
+</footer>
